feat(packages): add structural changes, renaming and ormconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2023",                      // Or a higher ECMAScript version you prefer
-    "module": "ES6",                      // Or other module types you want to use
-    "outDir": "./dist",                   // Output directory for compiled JavaScript files
-    "rootDir": "./src",                   // Source directory where your TypeScript files reside
+    "lib": ["ES2020", "DOM"],                      // Array of library files to be included in the compilation
+    "target": "ES2020",                      // Or a higher ECMAScript version you prefer
+    "module": "CommonJS",                      // Or other module types you want to use
+    "outDir": "./lib",                   // Output directory for compiled JavaScript files
     "strict": true,                       // Enforce strict type checking
-    "esModuleInterop": true               // Enable interoperability between CommonJS and ES6 modules
+    "esModuleInterop": true,           // Enable interoperability between CommonJS and ES6 modules
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "declaration": true
   },
-  "include": ["src"]                      // Array of directories or files to include in compilation
+  "include": ["src"],                      // Array of directories or files to include in compilation
+  "exclude": ["./node_modules"]
+  
 }
