--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,8 @@
 {
-  "packages": [
-    "src/packages/*"
-  ],
+  "packages": ["src/packages/*"],
   "version": "independent",
   "npmClient": "yarn",
-    "useWorkspaces": true,
   "ignoreChanges": [],
   "useNx": true,
-  "command": {
-    
-  }
+  "command": {}
 }
