--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "task-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "lerna run build",
-    "start": "node dist/app.js",
-    "bootstrap": "lerna bootstrap"
+    "start": "node dist/bundle.js",
+    "prettier": "prettier --write \"*/**/*.ts\""
   },
+  "engines": {
+    "node": "18.1.0"
+  },
+  "workspaces": [
+    "./src/packages/*"
+  ],
   "author": "Muhammad H. Shahzad",
   "private": "true",
-  "workspaces": ["src/packages/*"],
   "license": "ISC",
-  "dependencies": {
-    "typeorm": "^0.3.17"
-  },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "prettier": "^3.0.0"
+  },
+  "dependencies": {
+    "typeorm": "^0.3.17"
   }
 }
